[gd_scene load_steps=19 format=2]

[ext_resource path="res://UI/Prefabs/GameIcon.tscn" type="PackedScene" id=1]
[ext_resource path="res://PieceSets/StandardCards/StandardDeckv2.png" type="Texture" id=2]
[ext_resource path="res://UI/Animations/UIKlondikeSolitaireIcon.tres" type="Animation" id=3]
[ext_resource path="res://Scripts/UI/GameSelection.gd" type="Script" id=4]
[ext_resource path="res://PieceSets/ShogiPieces/ShogiPieces.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Game Selection/Spider.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Game Selection/SpiderEyes.png" type="Texture" id=7]
[ext_resource path="res://UI/Animations/UISpiderSolitaireIcon.tres" type="Animation" id=8]
[ext_resource path="res://Sprites/Util/Transparent.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Util/SquareMask.png" type="Texture" id=10]
[ext_resource path="res://Prefabs/Cosmetic/PileSprite.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Common/PlayArea.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Common/SmoothSprite.gd" type="Script" id=13]
[ext_resource path="res://PieceSets/SpanishCards/SpanishPlayingCards.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
length = 6.0
loop = true
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Node2D/Sprite/Sprite2:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 3.8, 4.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Node2D/Sprite/Sprite2/Sprite3:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.6, 3.8, 4.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Node2D/Sprite/Sprite2/Sprite3/Sprite4:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 0.9, 3.8, 4.1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Node2D/Sprite/Sprite2/Sprite3/Sprite4/Sprite5:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.2, 3.8, 4.1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Sprite/Sprite2/Sprite3/Sprite4/Sprite5/Shadow:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite/Sprite2/Sprite3/Sprite4/Shadow2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node2D/Sprite/Sprite2/Sprite3/Shadow3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Node2D/Sprite/Sprite2/Shadow4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Node2D/Sprite:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( -20, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.821215, -277.29, 1060, -0.897426, 466.125, 0.25, 0 ),
"times": PoolRealArray( 0, 4.55, 5.8 )
}
tracks/9/type = "method"
tracks/9/path = NodePath("..")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "strategyPlus_randomize"
} ]
}

[sub_resource type="Animation" id=2]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7.5, 7.5 ), Vector2( 0, 7.5 ), Vector2( 7.5, 7.5 ), Vector2( 0, 7.5 ), Vector2( 7.5, 7.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 7.5, -3 ), Vector2( 0, -3 ), Vector2( 7.5, -3 ), Vector2( 7.5, -3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Sprite1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 7.5, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Sprite2:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -1, 0, -1, -1 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.5, 1.501, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "pictureGallery_randomize"
}, {
"args": [  ],
"method": "pictureGallery_randomize"
}, {
"args": [ false ],
"method": "pictureGallery_randomize"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "PyramidSolitaireIcon"
length = 5.0
loop = true
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("PyramidIcon/CardD:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 585, -0.25, 0, 0.25, 0, -567, -0.25, 0, 0.25, 0, -567, -0.25, 0, 0.25, 0, 505, -0.25, 0, 0.25, 0, 585, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 0.8, 1.3, 1.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PyramidIcon/CardD:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -216, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0, -344, -0.25, 0, 0.25, 0, -216, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 0.8, 1.3, 1.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("PyramidIcon/CardB:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 185, -0.25, 0, 0.25, 0, -551, -0.25, 0, 0.25, 0, -551, -0.25, 0, 0.25, 0, -135, -0.25, 0, 0.25, 0, 185, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.5, 3.5, 3.51, 3.9 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("PyramidIcon/CardB:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -96, -0.25, 0, 0.25, 0, -344, -0.25, 0, 0.25, 0, -344, -0.25, 0, 0.25, 0, -96, -0.25, 0, 0.25, 0, -96, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.5, 3.5, 3.51, 3.9 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("PyramidIcon/CardB:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -15.2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.4, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("PyramidIcon/CardA:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -135, -0.25, 0, 0.25, 0, 521, -0.25, 0, 0.25, 0, 521, -0.25, 0, 0.25, 0, -135, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.2, 3.5, 3.51 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("PyramidIcon/CardA:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -96, -0.25, 0, 0.25, 0, 72, -0.25, 0, 0.25, 0, 72, -0.25, 0, 0.25, 0, -96, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.2, 3.5, 3.51 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("PyramidIcon/CardA:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 22.7, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.1, 1.3 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("PyramidIcon/CardC:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 25.0002, -0.25, 0, 0.25, 0, -135, -0.25, 0, 0.25, 0, -135, -0.25, 0, 0.25, 0, 25.0002, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 2.5, 4.2, 4.6 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("PyramidIcon/CardC:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( -232, -0.25, 0, 0.25, 0, -96, -0.25, 0, 0.25, 0, -96, -0.25, 0, 0.25, 0, -232, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 2.5, 4.2, 4.6 )
}
tracks/10/type = "method"
tracks/10/path = NodePath("..")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.8, 3.51 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "pyramidSolitaire_randomize"
}, {
"args": [ 1 ],
"method": "pyramidSolitaire_randomize"
}, {
"args": [ 2 ],
"method": "pyramidSolitaire_randomize"
} ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("PyramidIcon/CardC:z_index")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 3.5, 3.52 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -1, -1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "TrucoIcon"
length = 6.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("TrucoIcon/Polygon2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2.85816, -0.25, 0, 0.25, 0, 2.85816, -0.25, 0, 0.25, 0, 11.4291, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2, 2.5, 3, 5.4, 5.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TrucoIcon/Polygon2D3:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2.85816, -0.25, 0, 0.25, 0, -2.85816, -0.25, 0, 0.25, 0, -11.4291, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2, 2.5, 3, 5.4, 5.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("TrucoIcon/Polygon2D3:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -4.41064, -0.25, 0, 0.25, 0, -4.41064, -0.25, 0, 0.25, 0, -15.0031, -0.25, 0, 0.25, 0, -15.0031, -0.25, 0, 0.25, 0, -34, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2, 2.5, 5.4, 5.6, 5.9 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("TrucoIcon/Polygon2D:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 4.41064, -0.25, 0, 0.25, 0, 4.41064, -0.25, 0, 0.25, 0, 15.0031, -0.25, 0, 0.25, 0, 15.0031, -0.25, 0, 0.25, 0, 34, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2, 2.5, 5.4, 5.6, 5.9 )
}

[node name="GameSelection" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 4 )

[node name="PlayArea" type="ReferenceRect" parent="."]
margin_left = -607.0
margin_top = -1072.0
margin_right = 609.0
margin_bottom = 1080.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="KlondikeSolitaire" parent="." instance=ExtResource( 1 )]
displayName = "Klondike Solitaire"

[node name="Node2D4" type="Node2D" parent="KlondikeSolitaire"]
position = Vector2( 90, -270 )
rotation = 1.39801
scale = Vector2( 2.25, 2.25 )

[node name="Sprite4" type="Sprite" parent="KlondikeSolitaire/Node2D4"]
position = Vector2( 0, -0.098104 )
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 2 )
vframes = 5
hframes = 17
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="KlondikeSolitaire/Node2D4/Sprite4"]
modulate = Color( 0, 0, 0, 0.188235 )
show_behind_parent = true
position = Vector2( 2, -2 )
rotation = 1.49012e-08
texture = ExtResource( 2 )
vframes = 5
hframes = 17
frame = 53

[node name="Node2D3" type="Node2D" parent="KlondikeSolitaire"]
position = Vector2( -18, -234 )
rotation = 0.849975
scale = Vector2( 2.25, 2.25 )

[node name="Sprite3" type="Sprite" parent="KlondikeSolitaire/Node2D3"]
position = Vector2( 0, -0.0742579 )
scale = Vector2( 2.4, 2.4 )
texture = ExtResource( 2 )
vframes = 5
hframes = 17
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="KlondikeSolitaire/Node2D3/Sprite3"]
modulate = Color( 0, 0, 0, 0.188235 )
show_behind_parent = true
position = Vector2( 2, -2 )
rotation = 1.49012e-08
texture = ExtResource( 2 )
vframes = 5
hframes = 17
frame = 53

[node name="Node2D2" type="Node2D" parent="KlondikeSolitaire"]
position = Vector2( -72, -216 )
rotation = 0.356047
scale = Vector2( 2.25, 2.25 )

[node name="Sprite2" type="Sprite" parent="KlondikeSolitaire/Node2D2"]
position = Vector2( 0, -0.0417323 )
scale = Vector2( 2.7, 2.7 )
texture = ExtResource( 2 )
vframes = 5
hframes = 17
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="KlondikeSolitaire/Node2D2/Sprite2"]
modulate = Color( 0, 0, 0, 0.188235 )
show_behind_parent = true
position = Vector2( 2, -2 )
rotation = 1.49012e-08
texture = ExtResource( 2 )
vframes = 5
hframes = 17
frame = 53

[node name="Node2D" type="Node2D" parent="KlondikeSolitaire"]
position = Vector2( -126, -126 )
rotation = 0.143117
scale = Vector2( 2.25, 2.25 )

[node name="Sprite" type="Sprite" parent="KlondikeSolitaire/Node2D"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 5
hframes = 17
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="KlondikeSolitaire/Node2D/Sprite"]
modulate = Color( 0, 0, 0, 0.188235 )
show_behind_parent = true
position = Vector2( 2, -2 )
rotation = 1.49012e-08
texture = ExtResource( 2 )
vframes = 5
hframes = 17
frame = 53

[node name="AnimationPlayer" type="AnimationPlayer" parent="KlondikeSolitaire"]
autoplay = "KlondikeSolitaireIcon"
anims/KlondikeSolitaireIcon = ExtResource( 3 )

[node name="Strategy+" parent="." instance=ExtResource( 1 )]
position = Vector2( 1000, 0 )
displayName = "Strategy+"

[node name="Node2D" type="Node2D" parent="Strategy+"]
scale = Vector2( 1.7, 1.7 )

[node name="Sprite" type="Sprite" parent="Strategy+/Node2D"]
position = Vector2( 0, -64 )
rotation = -0.349066
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="Sprite2" type="Sprite" parent="Strategy+/Node2D/Sprite"]
show_behind_parent = true
position = Vector2( 0, -20 )
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="Sprite3" type="Sprite" parent="Strategy+/Node2D/Sprite/Sprite2"]
show_behind_parent = true
position = Vector2( 0, -20 )
rotation = 5.96047e-08
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="Sprite4" type="Sprite" parent="Strategy+/Node2D/Sprite/Sprite2/Sprite3"]
show_behind_parent = true
rotation = 5.96046e-08
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="Sprite5" type="Sprite" parent="Strategy+/Node2D/Sprite/Sprite2/Sprite3/Sprite4"]
show_behind_parent = true
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="Shadow" type="Sprite" parent="Strategy+/Node2D/Sprite/Sprite2/Sprite3/Sprite4/Sprite5"]
modulate = Color( 0, 0, 0, 0.188235 )
position = Vector2( 0, 18 )
texture = ExtResource( 2 )
vframes = 5
hframes = 17
frame = 53
region_rect = Rect2( 0, 0, 600, 0 )

[node name="Shadow2" type="Sprite" parent="Strategy+/Node2D/Sprite/Sprite2/Sprite3/Sprite4"]
modulate = Color( 0, 0, 0, 0.188235 )
position = Vector2( 0, 18 )
rotation = 2.98023e-08
texture = ExtResource( 2 )
vframes = 5
hframes = 17
frame = 53
region_rect = Rect2( 0, 0, 600, 0 )

[node name="Shadow3" type="Sprite" parent="Strategy+/Node2D/Sprite/Sprite2/Sprite3"]
modulate = Color( 0, 0, 0, 0.188235 )
position = Vector2( 0, 18 )
rotation = 8.9407e-08
texture = ExtResource( 2 )
vframes = 5
hframes = 17
frame = 53
region_rect = Rect2( 0, 0, 600, 0 )

[node name="Shadow4" type="Sprite" parent="Strategy+/Node2D/Sprite/Sprite2"]
modulate = Color( 0, 0, 0, 0.188235 )
position = Vector2( 0, 18 )
rotation = 1.49012e-07
texture = ExtResource( 2 )
vframes = 5
hframes = 17
frame = 53
region_rect = Rect2( 0, 0, 600, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Strategy+"]
autoplay = "StrategyPlusIcon"
anims/StrategyPlusIcon = SubResource( 1 )

[node name="PictureGallery" parent="." instance=ExtResource( 1 )]
position = Vector2( -1000, 0 )
displayName = "Picture Gallery"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PictureGallery"]
anims/PictureGalleryIcon = SubResource( 2 )

[node name="Sprite" type="Node2D" parent="PictureGallery"]
position = Vector2( 0, -60 )
scale = Vector2( 4.5, 7.5 )

[node name="Sprite1" type="Sprite" parent="PictureGallery/Sprite"]
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="Sprite2" type="Sprite" parent="PictureGallery/Sprite"]
position = Vector2( 7.5, -3 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="SpiderSolitaire" parent="." instance=ExtResource( 1 )]
position = Vector2( -2000, 0 )
displayName = "Spider Solitaire"

[node name="Spider" type="Sprite" parent="SpiderSolitaire"]
position = Vector2( -0.000366211, -370 )
scale = Vector2( 13, 13 )
texture = ExtResource( 6 )

[node name="SpiderEyes" type="Sprite" parent="SpiderSolitaire/Spider"]
position = Vector2( 0, 25.5 )
scale = Vector2( 1, 1.09905 )
texture = ExtResource( 7 )

[node name="Shadow" type="Sprite" parent="SpiderSolitaire/Spider"]
self_modulate = Color( 0, 0, 0, 0.45098 )
light_mask = 1024
position = Vector2( 15.4984, 4.78957 )
rotation = 0.208867
scale = Vector2( 0.599999, 0.999999 )
texture = ExtResource( 6 )
region_rect = Rect2( 0, 20, 15, 40 )

[node name="CL" type="Node2D" parent="SpiderSolitaire"]
position = Vector2( -104, 150 )
rotation = -0.20944
scale = Vector2( 1.5392, 2.6 )

[node name="Sprite" type="Sprite" parent="SpiderSolitaire/CL"]
position = Vector2( 0, -125.767 )
scale = Vector2( 3.5, 3.5 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="CR" type="Node2D" parent="SpiderSolitaire"]
position = Vector2( 104, 150 )
rotation = 0.20944
scale = Vector2( 1.56, 2.6 )

[node name="Sprite" type="Sprite" parent="SpiderSolitaire/CR"]
position = Vector2( 0, -129.247 )
scale = Vector2( 3.5, 3.5 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="SpiderMask" type="Light2D" parent="SpiderSolitaire/CR/Sprite"]
light_mask = 1024
position = Vector2( 0, -47.5 )
rotation = -0.000343956
scale = Vector2( 38, 32 )
texture = ExtResource( 9 )
mode = 3
range_height = 880.9
range_item_cull_mask = 1024
shadow_item_cull_mask = 1024

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpiderSolitaire"]
anims/SpiderSolitaireIcon = ExtResource( 8 )

[node name="Shogi" parent="." instance=ExtResource( 1 )]
position = Vector2( 2000, 0 )
displayName = "Shogi"

[node name="Sprite" type="Sprite" parent="Shogi"]
position = Vector2( 0, -80 )
scale = Vector2( 9.35, 11 )
texture = ExtResource( 5 )
vframes = 2
hframes = 8

[node name="Polygon2D2" type="Polygon2D" parent="Shogi/Sprite"]
show_behind_parent = true
position = Vector2( 2.43481, -3.65667 )
color = Color( 0.501961, 0.45098, 0.333333, 1 )
polygon = PoolVector2Array( 8.00403, 14.6545, 10.5, 13, 6.75684, -9.64215, -1.8988, -12.5327, -9.6825, -10.2203, -10.4684, -8.843 )

[node name="Polygon2D" type="Polygon2D" parent="Shogi/Sprite"]
show_behind_parent = true
position = Vector2( 0, -2.06472 )
color = Color( 0.713726, 0.65098, 0.498039, 1 )
polygon = PoolVector2Array( -10.5, 13, 10.5, 13, 8.38208, -10.8136, 0.286987, -13.5991, -7.55908, -11.3918 )

[node name="PyramidSolitaire" parent="." instance=ExtResource( 1 )]
position = Vector2( -3000, 0 )
displayName = "Pyramid Solitaire"

[node name="PyramidIcon" type="Node2D" parent="PyramidSolitaire"]

[node name="CardC" type="Sprite" parent="PyramidSolitaire/PyramidIcon"]
light_mask = 1024
position = Vector2( 25.0002, -232 )
scale = Vector2( 7.5, 7.5 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="CardA" type="Sprite" parent="PyramidSolitaire/PyramidIcon"]
light_mask = 1024
position = Vector2( -135, -96 )
scale = Vector2( 7.5, 7.5 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="CardB" type="Sprite" parent="PyramidSolitaire/PyramidIcon"]
light_mask = 1024
position = Vector2( 185, -96 )
scale = Vector2( 7.5, 7.5 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="CardD" type="Sprite" parent="PyramidSolitaire/PyramidIcon"]
light_mask = 1024
position = Vector2( 585, -216 )
scale = Vector2( 7.5, 7.5 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 17

[node name="PyramidMask" type="Light2D" parent="PyramidSolitaire/PyramidIcon"]
light_mask = 1024
position = Vector2( 0, -150 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
mode = 3
range_height = 880.9
range_item_cull_mask = 1024
shadow_item_cull_mask = 1024
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PyramidSolitaire"]
anims/PyramidSolitaireIcon = SubResource( 3 )

[node name="FreeCell" parent="." instance=ExtResource( 1 )]
position = Vector2( -4000, 0 )
displayName = "Free Cell"

[node name="FreeCellIcon" type="Node2D" parent="FreeCell"]

[node name="Sprite" parent="FreeCell/FreeCellIcon" instance=ExtResource( 11 )]
margin_left = 201.0
margin_top = -296.25
margin_right = 243.0
margin_bottom = -228.25
rect_rotation = -15.0
rect_scale = Vector2( 5, 5 )

[node name="Sprite2" parent="FreeCell/FreeCellIcon" instance=ExtResource( 11 )]
margin_left = -199.0
margin_top = -336.0
margin_right = -157.0
margin_bottom = -268.0
rect_rotation = 30.0
rect_scale = Vector2( 5, 5 )

[node name="Sprite3" parent="FreeCell/FreeCellIcon" instance=ExtResource( 11 )]
margin_left = -54.9998
margin_top = 1.52588e-05
margin_right = -12.9998
margin_bottom = 68.0
rect_rotation = 15.0
rect_scale = Vector2( 5, 5 )

[node name="Truco" parent="." instance=ExtResource( 1 )]
position = Vector2( -5000, 0 )
displayName = "Truco"

[node name="TrucoIcon" type="Node2D" parent="Truco"]

[node name="Polygon2D3" type="Polygon2D" parent="Truco/TrucoIcon"]
position = Vector2( 0, 30 )
scale = Vector2( 2, 2 )
offset = Vector2( 0, -96 )
antialiased = true
texture = ExtResource( 14 )
polygon = PoolVector2Array( -74.1667, -115.8, 74.1667, -115.8, 74.1667, 115.8, -74.1667, 115.8 )
uv = PoolVector2Array( 890, 694.8, 1038.33, 694.8, 1038.33, 926.4, 890, 926.4 )
script = ExtResource( 13 )
hframes = 12
vframes = 5
frame_coords = Vector2( 6, 3 )

[node name="Polygon2D2" type="Polygon2D" parent="Truco/TrucoIcon"]
position = Vector2( 0, 30 )
scale = Vector2( 2, 2 )
offset = Vector2( 0, -96 )
antialiased = true
texture = ExtResource( 14 )
polygon = PoolVector2Array( -74.1667, -115.8, 74.1667, -115.8, 74.1667, 115.8, -74.1667, 115.8 )
uv = PoolVector2Array( 0, 926.4, 148.333, 926.4, 148.333, 1158, 0, 1158 )
script = ExtResource( 13 )
hframes = 12
vframes = 5
frame_coords = Vector2( 0, 4 )

[node name="Polygon2D" type="Polygon2D" parent="Truco/TrucoIcon"]
position = Vector2( 0, 30 )
scale = Vector2( 2, 2 )
offset = Vector2( 0, -96 )
antialiased = true
texture = ExtResource( 14 )
polygon = PoolVector2Array( -74.1667, -115.8, 74.1667, -115.8, 74.1667, 115.8, -74.1667, 115.8 )
uv = PoolVector2Array( 0, 694.8, 148.333, 694.8, 148.333, 926.4, 0, 926.4 )
script = ExtResource( 13 )
hframes = 12
vframes = 5
frame_coords = Vector2( 0, 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Truco"]
anims/TrucoIcon = SubResource( 4 )
[connection signal="GameClicked" from="KlondikeSolitaire" to="." method="_on__GameClicked"]
[connection signal="GameClicked" from="Strategy+" to="." method="_on__GameClicked"]
[connection signal="GameClicked" from="PictureGallery" to="." method="_on__GameClicked"]
[connection signal="GameClicked" from="SpiderSolitaire" to="." method="_on__GameClicked"]
[connection signal="GameClicked" from="Shogi" to="." method="_on__GameClicked"]
[connection signal="GameClicked" from="PyramidSolitaire" to="." method="_on__GameClicked"]
[connection signal="GameClicked" from="FreeCell" to="." method="_on__GameClicked"]
[connection signal="GameClicked" from="Truco" to="." method="_on__GameClicked"]
